Correction of small German translation issues (#17)

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -10,7 +10,7 @@
   "Email": "email",
   "EmailAlreadyExist": "Diese email-Adresse ist bereits registriert. Möchten Sie sich einloggen oder Ihr Passwort wiederherstellen?",
   "EmailInvalid": "Bitte geben Sie eine gültige email-Adresse ein",
-  "EmailRequired": "Eine Email ist erforderlich",
+  "EmailRequired": "Eine email-Adresse ist erforderlich",
   "EmailRequiredError": "Wir benötigen eine email-Adresse, um Ihr Konto zu finden.",
   "Encrypt my master password": "Verschlüssele mein Masterpasswort",
   "EncryptMasterPassword": "Hier klicken, um dieses Passwort zu verschlüsseln, bevor es an lesspass.com gesendet wird",
@@ -25,7 +25,7 @@
   "Next": "Nächste",
   "NoMatchFor": "Ups! Dafür gibt es keine Übereinstimmung",
   "NoPassword": "Sie haben kein Passwort-Profil in Ihrer Datenbank gespeichert.",
-  "PasswordProfileCopied": "Ihr Passwort wurde kopiert",
+  "PasswordProfileCopied": "Ihr Passwort-Profil wurde kopiert",
   "PasswordProfileSuccessfullyDeleted": "Ihr Passwort-Profil wurde erfolgreich gelöscht!",
   "PasswordResetRequired": "Ein Passwort ist erforderlich",
   "PasswordResetSuccessful": "Ihr Passwort wurde erfolgreich zurückgesetzt.",
